@@ -1,0 +1,1 @@
+<p>Deleting player... please wait for your browser to redirect you.</p>
